# seed_fullstack

./: Cargo.toml  build_and_run.sh  readme.md  shell.nix
client/: Cargo.toml
server/: Cargo.toml  build.rs
server/src/: main.rs
