[package]
name = "server"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
actix-web-static-files = "3.0"

[dependencies]
actix = "0.10.0"
actix-web = "3.1.0"
actix-files = "0.4.0"
actix-rt = "1.1.1"
actix-web-static-files = "3.0"